# arxiv-literature-scout

./: .gitignore  CMakeLists.txt  CMakePresets.json  Technical Note.md  readme.md  vcpkg.json
apps/: main.cpp
arXiv Literature Agent/: CMakeLists.txt
include/: agent.h  arXiv Literature Agent.h  arxiv_client.h  config.h  models.h  pipeline.h  reporter.h
src/: agent.cpp  arXiv Literature Agent.cpp  arxiv_client.cpp  pipeline.cpp  reporter.cpp
tools/: lit_scout_tool.cpp  lit_scout_tool.h
